[WCS-43] Some interactive tool fixes (#636)
* disable add field/time when in add game mode

* only authorized person can now add timeslot/field/phase/game to an event

* better goBack in interactiveTool

* fix interactive tool top margin caused by invisible header

* code review

--- a/app/src/views/ScheduleInteractiveTool/ScheduleInteractiveTool.module.css
+++ b/app/src/views/ScheduleInteractiveTool/ScheduleInteractiveTool.module.css
@@ -1,4 +1,6 @@
 .mainDiv {
+  top: 0;
+  position: fixed;
   display: grid;
   grid-template-columns: 192px auto;
   grid-template-rows: auto auto;
